# mcp-for-postgres-db-demo

./: .env.sample  AGENTS.md  README.md  api_design.md  ingestion.md  plan.md  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/prompts/: write_tests.prompt.md  write_tests_with_cov.prompt.md  write_tests_with_libraries.prompt.md
agents/: agentframework_agent.py  copilotsdk_agent.py
data/: README.txt
docs/: fastmcp.avif  index.html  level1a_delete.mov  level1a_select.mov  level1b_select.mov  level2_delete_refusal.mov  level2_delete_toolerror.mov  level4_typed_count_failure.mov  level4_typed_search.mov  level5_delete_confirm.mov  mcp-simple-diagram.avif
evals/: __init__.py  dataset.py  evaluators.py  runner.py
infra/: main.bicep
scripts/: create_and_load_test_db.py  ingest_observations.py  setup_postgres_azurerole.py  setup_postgres_database.py
servers/: db.py  level1_freeform.py  level1a_discovery.py  level1b_discovery.py  level2_readonly.py  level3_scoped.py  level4_typed.py  level5_elicitation.py  tool_selection.py
src/backend/: pyproject.toml  requirements.txt
src/backend/fastapi_app/: __init__.py  dependencies.py  postgres_engine.py  postgres_models.py
src/backend/fastapi_app/api/: models.py  routes.py
tests/: conftest.py
